--- a/index.html
+++ b/index.html
@@ -117,26 +117,26 @@
           <li>
             <div class="what-box">
               <img src="images/box1.jpg" alt="Десктопні додатки" width="370">
-              <div class="image-description">
-                <p>Десктопні додатки</p>
-              </div>
+
+              <p class="image-description">Десктопні додатки</p>
+
             </div>
           </li>
           <li>
             <div class="what-box">
               <img src="images/box2.jpg" alt="Мобільні додатки" width="370">
-              <div class="image-description">
-                <p>Мобільні додатки</p>
-              </div>
+
+              <p class="image-description">Мобільні додатки</p>
+
             </div>
 
           </li>
           <li>
             <div class="what-box">
               <img src="images/box3.jpg" alt="Дизайнерські рішення" width="370">
-              <div class="image-description">
-                <p>Дизайнерські рішення</p>
-              </div>
+
+              <p class="image-description">Дизайнерські рішення</p>
+
             </div>
           </li>
 
@@ -408,7 +408,7 @@
     <div class="modal">
       <button class="modal-btn" data-modal-close>
         <svg class="icon-close">
-          <use href="/images/icons.svg#icon-close"></use>
+          <use href="./images/icons.svg#icon-close"></use>
         </svg>
       </button>
     </div>
